--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
 <br>
 <br>
 <font size='4' color="red">@emirizmofficial</font><h3>
-<font size='4' color="aqua">S.a</font><h3>
+<font size='4' color="aqua">Emirizm is Here</font><h3>
 <font size='4' color="white">www.emirizm.com<font><h3>
 <center><img src="https://i.hizliresim.com/jj1jmD.gif" width="200" height="100"></center>
 <a href="https://emirizm.com">
